# -chinese-chess

./: .gitignore  pubspec.yaml  push_to_github.bat
.github/workflows/: build-apk.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  engine_wrapper.cpp
android/app/src/main/kotlin/com/example/chinese_chess/: MainActivity.kt
assets/: openings.txt
assets/nnue/: README.txt
lib/: main.dart
lib/game/: chess_game.dart
lib/ui/: chess_board.dart
